Решение заданий модуль 1

--- a/1_04_dataframes_series/01_dataframe_inform.ipynb
+++ b/1_04_dataframes_series/01_dataframe_inform.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "75e6cbac-7867-49ca-8b8f-303197ca4367",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "641a3d13-27c6-4079-907d-fbf76c105103",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "63ccd187-f6a9-4cd0-927f-c133a0efc494",
    "metadata": {},
    "outputs": [
@@ -115,61 +115,6 @@
        "      <td>78</td>\n",
        "      <td>75</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group B</td>\n",
-       "      <td>associate's degree</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>none</td>\n",
-       "      <td>71</td>\n",
-       "      <td>83</td>\n",
-       "      <td>78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group B</td>\n",
-       "      <td>some college</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>88</td>\n",
-       "      <td>95</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>male</td>\n",
-       "      <td>group B</td>\n",
-       "      <td>some college</td>\n",
-       "      <td>free/reduced</td>\n",
-       "      <td>none</td>\n",
-       "      <td>40</td>\n",
-       "      <td>43</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>male</td>\n",
-       "      <td>group D</td>\n",
-       "      <td>high school</td>\n",
-       "      <td>free/reduced</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>64</td>\n",
-       "      <td>64</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group B</td>\n",
-       "      <td>high school</td>\n",
-       "      <td>free/reduced</td>\n",
-       "      <td>none</td>\n",
-       "      <td>38</td>\n",
-       "      <td>60</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -181,33 +126,23 @@
        "2  female        group B             master's degree      standard   \n",
        "3    male        group A          associate's degree  free/reduced   \n",
        "4    male        group C                some college      standard   \n",
-       "5  female        group B          associate's degree      standard   \n",
-       "6  female        group B                some college      standard   \n",
-       "7    male        group B                some college  free/reduced   \n",
-       "8    male        group D                 high school  free/reduced   \n",
-       "9  female        group B                 high school  free/reduced   \n",
        "\n",
        "  test preparation course  math score  reading score  writing score  \n",
        "0                    none          72             72             74  \n",
        "1               completed          69             90             88  \n",
        "2                    none          90             95             93  \n",
        "3                    none          47             57             44  \n",
-       "4                    none          76             78             75  \n",
-       "5                    none          71             83             78  \n",
-       "6               completed          88             95             92  \n",
-       "7                    none          40             43             39  \n",
-       "8               completed          64             64             67  \n",
-       "9                    none          38             60             50  "
+       "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Первые несколько строк из датафрейма\n",
-    "students_perfomance.head(10)"
+    "students_perfomance.head()"
    ]
   },
   {
@@ -335,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "e02d97eb-82be-4f9f-bd9b-e564c9522fe3",
    "metadata": {},
    "outputs": [
@@ -387,7 +322,7 @@
        "male        63.311203"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
