--- a/1_04_dataframes_series/02_dataframe_loc_iloc.ipynb
+++ b/1_04_dataframes_series/02_dataframe_loc_iloc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5db17d64-633b-46a9-9381-efa1dac53d6e",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ae746511-e5d3-4a75-8bfe-145fb480bfd0",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "31f7c22d-0006-45ee-9f06-b47b290639c9",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "472c2e7a-af70-42ef-98dc-9d3d6961630f",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "4    male        group C                some college"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "b57a88f5-ce71-440c-94d1-28380612df3d",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,7 @@
        "10    male          58             52"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "694b8803-521a-416e-9de9-40dba4ed5d77",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "5034b5f2-5f8f-452a-830d-22c8662af6ca",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "42a964c4-262f-42c9-a360-7c940c018ea0",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "Ilyn Payne               completed          64             64             67  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "594d80be-093c-4b50-a00d-af20613f37d7",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
        "Joffrey    male             39"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "9881d894-07d3-4442-9504-4a3b538bc66c",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "44473c72-ebec-4a71-a4d8-c797e14283a1",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
        "Name: gender, dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "4083fe2c-f856-40d9-817f-47adbd69ccb4",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
        "Ilyn Payne    male"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,6 +628,124 @@
     "#Получение датафрейма из одной переменной\n",
     "students_perfomance_with_names[['gender']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "30b2b367-f10e-4a19-80f5-e3717c7bf0f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race/ethnicity</th>\n",
+       "      <th>parental level of education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>test preparation course</th>\n",
+       "      <th>math score</th>\n",
+       "      <th>reading score</th>\n",
+       "      <th>writing score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cersei</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>72</td>\n",
+       "      <td>72</td>\n",
+       "      <td>74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gregor</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>76</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Joffrey</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>40</td>\n",
+       "      <td>43</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ilyn Payne</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>high school</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>64</td>\n",
+       "      <td>64</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            gender race/ethnicity parental level of education         lunch  \\\n",
+       "Cersei      female        group B           bachelor's degree      standard   \n",
+       "Gregor        male        group C                some college      standard   \n",
+       "Joffrey       male        group B                some college  free/reduced   \n",
+       "Ilyn Payne    male        group D                 high school  free/reduced   \n",
+       "\n",
+       "           test preparation course  math score  reading score  writing score  \n",
+       "Cersei                        none          72             72             74  \n",
+       "Gregor                        none          76             78             75  \n",
+       "Joffrey                       none          40             43             39  \n",
+       "Ilyn Payne               completed          64             64             67  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Выбор строк, в которых есть в названии score через функцию фильтр\n",
+    "students_perfomance_with_names.filter(like='e', axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4ba2257-28ea-46c0-a1e7-d86e202a0b87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
